updates(*): fixed overflow icon hover for top bar.

--- a/components/menu/menu-contact/index.sass
+++ b/components/menu/menu-contact/index.sass
@@ -24,7 +24,7 @@
     justify-content: center
     transition: all .25s ease-in
     cursor: pointer
-    padding: .1rem
+    padding: .15rem
     width: fit-content
     height: rem-calc(30)
     
@@ -52,6 +52,7 @@
       @include nexus
         height: 70%
       height: 100%
+      overflow: visible
 
       path
         transition: all .2s ease
