--- a/components/menu/menu-social-media/index.sass
+++ b/components/menu/menu-social-media/index.sass
@@ -23,7 +23,7 @@
     transition: all .25s ease-in
     margin-bottom: .5rem
     cursor: pointer
-    padding: .1rem
+    padding: .15rem
     width: rem-calc(30)
     height: rem-calc(30)
     
@@ -58,6 +58,7 @@
       @include nexus
         height: 70%
       height: 100%
+      overflow: visible
 
       path
         transition: all .2s ease
