--- a/components/navigation/navigation-top-bar/index.sass
+++ b/components/navigation/navigation-top-bar/index.sass
@@ -10,7 +10,6 @@
   width: 100vw
   height: fit-content
   max-height: 100vh
-  overflow: hidden
 
   &--hide
     transform: translateY(-105%)
